[package]
name = "ron-reboot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", optional = true }

[features]
default = ["serde1_serde"]

# Serialize derives for ast
serde1_ast_derives = ["serde/derive"]
# serde deserializer
serde1_serde = ["serde"]
test = []

[dev-dependencies]
ron = "*"
serde = { version = "1", features = ["derive"] }

[[example]]
name = "roundtrip"
required-features = ["serde1_ast_derives"]

[[example]]
name = "simple"
required-features = ["serde/derive", "serde1_serde"]
