[package]
name = "ron-reboot"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.130", optional = true }

[features]
default = ["utf8_parser", "utf8_parser_serde1"]

# === Parsers & Deserializers ===
utf8_parser = []
utf8_parser_serde1 = ["serde", "utf8_parser"]

# === Other features ===
serde1_ast_derives = ["serde/derive"] # Serialize derives for abstract syntax tree

# used internally for unit tests to circumvent Rust / Cargo restrictions
test = ["serde1_ast_derives", "utf8_parser_serde1"]

[dev-dependencies]
ron = "*"
serde = { version = "1", features = ["derive"] }

[[example]]
name = "roundtrip"
required-features = ["serde1_ast_derives"]

[[example]]
name = "simple"
required-features = ["serde/derive", "utf8_parser_serde1"]
